--- a/SpotifyWpf/MainWindow.xaml
+++ b/SpotifyWpf/MainWindow.xaml
@@ -52,8 +52,31 @@
                             </StackPanel>
                             <TextBlock Grid.Column="1" FontFamily="Segoe MDL2 Assets" Text="&#xE948;" FontSize="18" Style="{StaticResource sideMenu}"/>
                         </Grid>
-                        <StackPanel>
-                            
+                        <StackPanel Orientation="Horizontal">
+                            <Button Background="#252525" BorderBrush="Transparent"
+                                Padding="5 1" Margin="14 14 2 15"
+                            >           
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Playlists" FontWeight="DemiBold" Margin="2 0" Foreground="White" />
+                                </StackPanel>
+                                <Button.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="10"/>
+                                    </Style>
+                                </Button.Resources>
+                            </Button>
+                            <Button Background="#252525" BorderBrush="Transparent"
+                                Padding="5 1" Margin="2 14 2 16"
+                            >   
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Artists" FontWeight="DemiBold" Margin="2 0" Foreground="White" />
+                                </StackPanel>
+                                <Button.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="10"/>
+                                    </Style>
+                                </Button.Resources>
+                            </Button>
                         </StackPanel>
                     </StackPanel>
                 </Border>
